# ml3-lr1

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
ml3_1/: __init__.py  dataset.py  features.py  plots.py
ml3_1/modeling/: predict.py  train.py
